Tournament list for each user is aligned correctly now.

--- a/src/App.css
+++ b/src/App.css
@@ -284,8 +284,12 @@ body {
   width: 35%;
 }
 
+.users-tournaments-title {
+  /* text-align: left; */
+}
+
 .users-tournaments {
+  display: inline-block;
   list-style-type: circle;
-  /* margin-left: 2rem; */
   text-align: left;
 }
